# servicebus-mcp

./: CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
src/servicebus_mcp/: client.py  server.py
src/servicebus_mcp/tools/: list_namespaces.py  list_queues.py  list_topics.py  peek_dlq.py  peek_messages.py  peek_subscription_dlq.py  peek_subscription_messages.py  purge_dlq.py  purge_queue.py  purge_subscription.py  purge_subscription_dlq.py  requeue_dlq.py  requeue_subscription_dlq.py  send_batch.py  send_message.py  utils.py
