[project]
name = "servicebus-mcp"
version = "0.2.3"
description = "MCP server for sending and inspecting messages on Azure Service Bus"
license = { file = "LICENSE" }
requires-python = ">=3.10"
dependencies = [
    "mcp>=1.0",
    "azure-servicebus>=7.12",
    "azure-identity>=1.17",
    "azure-mgmt-servicebus>=8.0",
]

[project.urls]
Homepage = "https://github.com/BrianDeacon/servicebus-mcp"
Repository = "https://github.com/BrianDeacon/servicebus-mcp"
Issues = "https://github.com/BrianDeacon/servicebus-mcp/issues"

[project.scripts]
servicebus-mcp = "servicebus_mcp.server:main"

[tool.uv]
package = true


[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/servicebus_mcp"]
